fix spacing

--- a/app/globals.css
+++ b/app/globals.css
@@ -174,7 +174,3 @@
 .section {
   flex-wrap: wrap;
 }
-
-.btn-link {
-  margin-top: auto;
-}
